--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,25 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
-a {
-  color: #00B7FF;
+form {
+  display: inline;
+}
+input {
+  padding: 5px;
+  border-radius: 5%;
+}
+button {
+  padding: 5px;
+  border-radius: 10%;
+}
+.button1:hover{
+  background-color: red;
+}
+.button2:hover{
+  background-color: lightgreen;
 }
